fix: space and alignment in solar design buttons

--- a/views/scss/inc/solar/_buttons.scss
+++ b/views/scss/inc/solar/_buttons.scss
@@ -6,12 +6,14 @@ body.solar-design {
         font-size: 12px !important;
         font-weight: bold;
 
-        text-transform: uppercase;
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
+        &, .li-inner {
+            text-transform: uppercase;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            gap: 8px;
+        }
         padding: 0 16px;
-        gap: 8px;
 
         line-height: var(--button-height);
         height: var(--button-height);
